--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&family=Inter&family=Outfit&family=Raleway:wght@600&family=Roboto+Slab&display=swap');
+@layer base {
+  body {
+    /* @apply font-mono; */
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer components {
+  .header-icon {
+    @apply text-xl
+  }
+
+  /* Hero */
+  .hero-btn {
+    @apply uppercase text-white border-white border-2 mt-[40px]
+    tracking-wider py-3 px-10 ease-in-out duration-300 hover:bg-white hover:text-black;
+  }
+
+  .card {
+    @apply mb-5 block rounded-lg border border-gray-200 shadow-md;
+  }
+
+  .primary-button {
+    @apply rounded bg-amber-300 py-2 px-4 shadow outline-none hover:bg-amber-400 active:bg-amber-500;
+  }
+
 }
