added collections page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,3 +54,9 @@
   }
 
 }
+
+@layer utilities {
+  .absolute-center {
+    @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2;
+  }
+}
