--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,14 +4,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&family=Inter&family=Outfit&family=Raleway:wght@600&family=Roboto+Slab&display=swap');
 @layer base {
   body {
-    /* @apply font-mono; */
+    @apply text-[#212529];
   }
 }
 
 @layer components {
   /* Header */
   .scrolled {
-    @apply absolute top-0 z-20 bg-slate-200 opacity-90 font-black; 
+    @apply absolute top-0 z-20 bg-slate-50 opacity-90 font-black; 
   }
 
   .header-icon {
@@ -21,7 +21,7 @@
   /* Hero */
   .hero-btn {
     @apply uppercase text-white border-white border-2 mt-4 md:mt-10
-    tracking-wider py-1 px-5 md:py-3 md:px-10 ease-in-out duration-300 hover:bg-white hover:font-black;
+    tracking-wider py-1 px-5 md:py-3 md:px-10 ease-in-out duration-300 hover:bg-white hover:text-[#212529];
   }
 
   /* Teaser */
@@ -34,7 +34,7 @@
 
   /* Footer */
   .footer-icon {
-    @apply text-2xl cursor-pointer transition duration-300 hover:scale-125 hover:text-blue-500
+    @apply text-2xl cursor-pointer transition duration-300 hover:scale-125 hover:text-blue-500;
   }
   .footer-links {
     @apply hover:text-gray-600 cursor-pointer;
@@ -42,7 +42,7 @@
 
   /* Side Menu */
   .menu-list {
-    @apply p-4 border-t border-gray-300 transition-colors duration-200 cursor-pointer hover:bg-slate-100
+    @apply p-4 border-t border-gray-300 transition-colors duration-200 cursor-pointer hover:bg-[#e9ecef];
   }
 
   .card {
@@ -62,8 +62,7 @@
   .custom-hover{
     @apply transition duration-200 hover:bg-slate-100 hover:border-x-blue-500;
   }
-
-  .font-black{
-    @apply text-[#212529]; 
+  .main-text {
+    @apply font-fuzzy text-[#212529] tracking-wider;
   }
 }
