added styles for product details page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,12 +11,13 @@
 .swiper-pagination {
   @apply !bottom-5 !w-[30%] 
 }
-.carousel-root {
+/* .carousel-root {
   @apply md:flex
-}
-.thumbs{
+} */
+
+/* .thumbs{
   @apply  md:flex md:flex-col
-}
+} */
 
 @layer components {
   /* Header */
