added errors handling

--- a/src/styles/login-page.css
+++ b/src/styles/login-page.css
@@ -1,7 +1,7 @@
 .login-page {
       padding-top: 2rem;
       height: 100vh;
-      background-image: linear-gradient(to bottom, #f4f9f9, #cbece5, #abddc6, #98cc9e, #93b970);
+      background-image: linear-gradient(to bottom, #cfebeb, #cfe4e0, #eaf3e8, #c8d7ce, #b8d8ae);
 }
 
 .animate-wrapper {
