--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,6 +64,14 @@
     @apply absolute uppercase bg-white px-4 py-2 rounded-full transition-colors duration-300 hover:bg-[#242424] hover:text-white;
   }
 
+  /* Loader */
+  .spinner-wrapper {
+    @apply fixed top-0 left-0 z-50 w-screen h-screen bg-white flex justify-center items-center;
+  }
+  .spinner {
+    @apply animate-spin rounded-full h-32 w-32 border-t-2 border-b-2 border-gray-900;
+  }
+
 }
 
 @layer utilities {
