--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,8 +64,12 @@
     @apply rounded font-fuzzy tracking-wider text-lg bg-[#ced4da] py-2 px-5 transition-colors duration-300 shadow outline-none hover:bg-[#adb5bd] active:bg-amber-500;
   }
 
+  /* Buttons */
   .login-btn {
     @apply  main-text absolute uppercase bg-white px-4 py-2 rounded-xl transition-colors duration-300 hover:bg-[#242424] hover:text-white;
+  }
+  .main-btn {
+    @apply  font-bold uppercase bg-[#242424] text-white tracking-wider whitespace-nowrap font-montserrat px-8 text-center py-3 rounded-xl transition-colors duration-300 hover:bg-[#fff] hover:text-black;
   }
 
   /* Loader */
@@ -95,6 +99,9 @@
 
   .custom-hover {
     @apply transition duration-200 hover:bg-slate-100 hover:border-x-blue-500;
+  }
+  .custom-gradient {
+    background-image: linear-gradient(to bottom, #cfebeb, #cfe4e0, #eaf3e8, #c8d7ce, #b8d8ae);
   }
 
   .main-text {
