edited styles in product page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -128,4 +128,27 @@
    .flow-btn:hover::before {
     @apply translate-x-0;
    }
+
+   .blur-load {
+    @apply bg-cover bg-center bg-no-repeat w-full h-full ;
+   }
+
+   .color-active {
+    @apply scale-110 border-spacing-2 border-gray-300 border-2 shadow-gray-300 shadow-lg pointer-events-none;
+   }
+
+   .drawer {
+    transition: all 400ms cubic-bezier(0.4, 0, 0.2, 1) ;
+    overflow: hidden;
+  }
+  
+  .drawer-close {
+    height: 0px;
+    opacity: 0 ;
+  }
+  
+  .drawer-open {
+    height: 60px;
+    opacity: 1;
+  }
 }
